--- a/public/style.css
+++ b/public/style.css
@@ -1,7 +1,7 @@
 body {
   margin: 0;
   font-family: Arial, sans-serif;
-  background-image: url('puppies.jpg');
+  background-image: url('doggy.webp');
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
@@ -34,10 +34,13 @@ header h1 {
   padding: 0 1rem;
 }
 
-.menu-icon,
+.menu-icon{
+  justify-items: left;
+  font-size: 24px;
+  cursor: pointer;
+}
 .profile {
-  right: 20px;
-  left: 20px;
+  justify-items: right;
   font-size: 24px;
   cursor: pointer;
 }
@@ -66,7 +69,7 @@ nav#sidebar {
 .profile-menu {
   position: absolute;
   top: 130px;
-  right: 10px;
+  right: 20px;
   background-color: #f4f4f4;
   padding: 1rem;
   box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.1);
@@ -93,6 +96,9 @@ nav ul li:hover,
 main#main-content {
   padding: 2rem;
   margin-left: 20px;
+  color: #fcfafa;
+  font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+  font-size:x-large;
 }
 
 .hidden {
@@ -110,4 +116,8 @@ button {
 
 button:hover {
   background-color: #483664;
+}
+.class{
+  background-color: red;
+  color: white;
 }
