--- a/public/style.css
+++ b/public/style.css
@@ -1,7 +1,7 @@
 body {
   margin: 0;
   font-family: Arial, sans-serif;
-  background-image: url('doggy.webp');
+  background-image: url('images/doggy.webp');
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
@@ -145,4 +145,22 @@ button:hover {
 
 #co{
   color:black;
+}
+.container{
+  width: 100%;
+  display: flex;
+  justify-content: center;
+}
+.box{
+  display: flex;
+    flex-direction: column; /* Makes form fields stack */
+    justify-content: center;
+    align-items: center;
+    width: 400px;
+    padding: 20px;
+    border-radius: 30px;
+    border: 2px solid black;
+    margin: 40px auto;
+    transition: background-color 0.1s, transform 0.5s;
+    background-color: #f4f4f4;
 }
