--- a/public/style.css
+++ b/public/style.css
@@ -111,7 +111,7 @@ nav ul li:hover,
 main#main-content {
   padding: 2rem;
   margin-left: 20px;
-  color: #fcfafa;
+  color: #f2f0f0;
   font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
   font-size: x-large;
 }
@@ -133,10 +133,7 @@ button {
 button:hover {
   background-color: #483664;
 }
-#class{
-  background-color: greenyellow;
-  color: rgb(58, 15, 20);
-}
+
 /* Custom class button */
 #class:hover {
   background-color:yellowgreen;
@@ -164,3 +161,35 @@ button:hover {
     transition: background-color 0.1s, transform 0.5s;
     background-color: #f4f4f4;
 }
+footer {
+  background-color: greenyellow;
+  color: rgb(58, 15, 20);
+  text-align: center;
+  padding: 1rem;
+  position: fixed;
+  bottom: 0;
+  width: 100%;
+}
+.adoption-row {
+  display: flex;
+  justify-content: space-around;
+  flex-wrap: wrap;
+  gap: 20px;
+  margin-top: 20px;
+}
+
+.adoption-card {
+  background-color: #787373;
+  padding: 15px;
+  border-radius: 15px;
+  text-align: center;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+  width: 200px;
+}
+
+.adoption-card img {
+  width: 100%;
+  height: auto;
+  border-radius: 10px;
+}
+
